@@ -3,7 +3,7 @@ dnl "$Id: cups-pam.m4 5466 2006-04-26 19:52:27Z mike $"
 dnl
 dnl   PAP (AppleTalk) stuff for the Common UNIX Printing System (CUPS).
 dnl
-dnl   Copyright 2007 by Apple Inc.
+dnl   Copyright 2007-2008 by Apple Inc.
 dnl   Copyright 2006 by Easy Software Products, all rights reserved.
 dnl
 dnl   These coded instructions, statements, and computer programs are the
@@ -15,13 +15,15 @@ dnl
 
 # Currently the PAP backend is only supported on MacOS X with the AppleTalk
 # SDK installed...
+AC_ARG_ENABLE(pap, [  --enable-pap            build with AppleTalk support, default=auto])
+
 PAP=""
-if test $uname = Darwin; then
+AC_SUBST(PAP)
+
+if test x$enable_pap != xno -a $uname = Darwin; then
 	PAP="pap"
 	AC_CHECK_HEADER(AppleTalk/at_proto.h)
 fi
-
-AC_SUBST(PAP)
 
 dnl
 dnl End of "$Id: cups-pam.m4 5466 2006-04-26 19:52:27Z mike $".
